umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_oh.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["O#n2#u#v" "H#v"] :bonds [[0 1 "1"]]} :success true}
  :counts {:output {:atoms ["O#n2#u#v" "H#v"] :bonds [[0 1 "1"]]} :success true}}
