umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_pcl3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["P#n#v3" "Cl#n3#v" "Cl#n3#v" "Cl#n3#v"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :atoms ["P#n#v3" "Cl#n3#v" "Cl#n3#v" "Cl#n3#v"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}}
