umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_sbh2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["Sb#n#u#v2" "H#v" "H#v"]
      :bonds [[0 1 :single] [0 2 :single]]
      :charge 0
      :spin "#u1#s2"}
    :success true}
  :counts {
    :output {
      :atoms ["Sb#n#u#v2" "H#v" "H#v"]
      :bonds [[0 1 :single] [0 2 :single]]
      :charge 0
      :spin "#u1#s2"}
    :success true}}
