umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_seh.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Se#n2#u#v" "H#v"] :bonds [[0 1 "1"]] :charge 0 :spin "#u1 #s2"}} :counts {:success true :output {:atoms ["Se#n2#u#v" "H#v"] :bonds [[0 1 "1"]] :charge 0 :spin "#u1 #s2"}}}
