umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_sh.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["S#n2#u#v" "H#v"] :bonds [[0 1 :single]]} :success true}
  :counts {:output {:atoms ["S#n2#u#v" "H#v"] :bonds [[0 1 :single]]} :success true}}
