umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_sif4.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["Si#v4" "F#n3#v" "F#n3#v" "F#n3#v" "F#n3#v"]
      :bonds [[0 1 "1"] [0 2 "1"] [0 3 "1"] [0 4 "1"]]}
    :success true}
  :counts {
    :output {
      :atoms ["Si#v4" "F#n3#v" "F#n3#v" "F#n3#v" "F#n3#v"]
      :bonds [[0 1 "1"] [0 2 "1"] [0 3 "1"] [0 4 "1"]]}
    :success true}}
